--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>hola mundo</h1>
+    <main>
+        <section id="telefone">            
+
+        </section>
+
+        <section id="redes-sociais">            
+
+        </section>
+    </main>
     
 </body>
 </html>
