--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto redes sociais</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
+
+    <link rel="shortcut icon" href="pacote-d013/favicon.ico" 
+    type="image/x-icon">
+
 </head>
 <body>
     <main>
         <section id="telefone">            
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
 
         <section id="redes-sociais">            
